--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ h1 {
     justify-content: center;
     align-items: center;
     flex-flow: column wrap;
-    /* border: 1px solid black; */
+    border: 1px solid black;
     height: 50px;
     width: 50px;
     margin-top: 1rem;
@@ -72,6 +72,8 @@ h1 {
     background-color: black;
     width: 2rem;
     height: 1px;
+    opacity: 1;
+    transition: all 1s ease-in-out;
 }
 
 .hamburger__wrapper .menu__1 .menu__btn__1::before {
@@ -81,6 +83,7 @@ h1 {
     width: 2rem;
     height: 1px;
     transform: translateY(-10px);
+    transition: all 1s ease-in-out;
 }
 
 .hamburger__wrapper .menu__1 .menu__btn__1::after {
@@ -90,10 +93,29 @@ h1 {
     width: 2rem;
     height: 1px;
     transform: translateY(10px);
+    transition: all 1s ease-in-out;
 }
 
 
-/* Menu Button 1 */
+/* Animation For Menu Button 1 */
+
+.hamburger__wrapper .menu__1 .menu__btn__1.open span {
+    transform: scaleX(0);
+}
+
+.hamburger__wrapper .menu__1 .menu__btn__1.open::before {
+    transform: rotate(45deg);
+}
+
+.hamburger__wrapper .menu__1 .menu__btn__1.open::after {
+    transform: rotate(-45deg);
+}
+
+
+/* End Animation For Menu Button 1 */
+
+
+/* End Menu Button 1 */
 
 
 /* End Syle Menu-1 */
