--- a/css/style.css
+++ b/css/style.css
@@ -200,3 +200,54 @@ h1 {
 
 
 /* ===================== End Syle Menu-2 ===================== */
+
+
+/* ===================== Syle Menu-3 ===================== */
+
+.hamburger__wrapper .menu__3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    margin: 1rem 0;
+}
+
+
+/* Menu Button 1 */
+
+.hamburger__wrapper .menu__3 .menu__btn__3 {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-flow: column wrap;
+    border: 1px solid black;
+    height: 50px;
+    width: 50px;
+    margin-top: 1rem;
+    cursor: pointer;
+}
+
+.hamburger__wrapper .menu__3 .menu__btn__3 .line__2,
+.hamburger__wrapper .menu__3 .menu__btn__3 .line__3 {
+    background-color: black;
+    width: 1.5rem;
+    height: 1px;
+}
+
+.hamburger__wrapper .menu__3 .menu__btn__3 .line__1 {
+    background-color: black;
+    width: 0.875rem;
+    height: 1px;
+    margin-left: -11px;
+    margin-top: 0.5rem;
+}
+
+.hamburger__wrapper .menu__3 .menu__btn__3 .line__3 {
+    margin-bottom: 0.5rem;
+}
+
+
+/* End Menu Button 3 */
+
+
+/* ===================== End Syle Menu-3 ===================== */
