--- a/css/style.css
+++ b/css/style.css
@@ -274,3 +274,13 @@ h1 {
 
 
 /* ===================== End Syle Menu-3 ===================== */
+
+
+/* ===================== For Tablet Screen ===================== */
+
+@media screen and (min-width:768px) {
+    .hamburger__wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
