--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,8 @@
     font-size: 18px;
     --font-family--Montserrat: 'Montserrat', sans-serif;
     --font-family--Poppins: "Poppins", sans-serif;
-    --color-lavender: lavender;
+    --color-lavender: #FFE1C9;
 }
-
-
-/* * {
-  border: 1px solid orange;
-} */
 
 body {
     background-color: var(--color-lavender);
@@ -42,7 +37,6 @@ h1 {
 }
 
 .hamburger__wrapper {
-    border: 1px solid orange;
     border-radius: 15px;
     margin: 1rem;
 }
@@ -63,6 +57,18 @@ img {
     flex-flow: column wrap;
 }
 
+#menu:hover {
+    background-color: #FFEBDE;
+}
+
+#menu {
+    height: 100%;
+    transition: all 0.4s ease-in;
+}
+
+
+/* End Base Style */
+
 
 /* ===================== Syle Menu-1 ===================== */
 
@@ -72,6 +78,7 @@ img {
     align-items: center;
     flex-flow: column wrap;
     margin: 1rem 0;
+    height: 100%;
 }
 
 
@@ -423,7 +430,7 @@ img {
 }
 
 .hamburger__wrapper .menu__5 .menu__btn__5.open .line__2 {
-    transform: rotate(90deg) translateY(-1px);
+    transform: rotate(90deg);
 }
 
 .hamburger__wrapper .menu__5 .menu__btn__5.open .line__3 {
@@ -524,12 +531,15 @@ img {
     .hamburger__wrapper {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        grid-template-rows: 100% 100%;
         margin: 1rem;
+        grid-gap: 20px;
     }
 }
 
 @media screen and (min-width:1280px) {
     .hamburger__wrapper {
+        margin: 2rem;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
     }
